--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@ index.html page for portfolio website
                 <span class="learn-more-btn-content">Learn More</span>
             </button>
             <!-- download resume button -->
-            <a href="portfolio/Faso_Resume.pdf" target="_blank" class="learn-more-btn" download="Faso_Resume.pdf">
+            <a href="Faso_Resume.pdf" target="_blank" class="learn-more-btn" download="Faso_Resume.pdf">
                 <span class="learn-more-btn-content">Download Resume</span>
             </a>
         </div>
         <div class="intro-image">
-            <img src="images/Headshot.jpg" alt="Emily Faso's Headshot">
+            <img src="Headshot.jpg" alt="Emily Faso's Headshot">
             <div class="skills">
                 <span>HTML</span>
                 <span>CSS</span>
