--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ index.html page for portfolio website
         <div class="container text-center">
             <div class="row">
               <div class="col align-self-start">
-                Hi! My name is Emily as you probably already know, and I am currently about to conclude my senior year at Bloomsburg University of Pennsylvania as a Computer Science major with a focus in Web Development this upcoming May of 2025. I pride myself in my skills and passion for website development, website design, and creating aesthetically pleasing UI/UX for mobile and desktop applications, but I am interested in all fields of tech- including, but not limited to: front-end development, back-end development, full-stack development, data analysis, IT hardware & security, and pretty much anything else you can think of- if it involves technology, I'm into it.
+                Hi! My name is Emily as you may already know, and I am currently about to conclude my senior year at Bloomsburg University of Pennsylvania as a Computer Science major with a focus in Web Development this upcoming May of 2025. I pride myself in my skills and passion for website development, website design, and creating aesthetically pleasing UI/UX for mobile and desktop applications, but I am interested in all fields of tech- including, but not limited to: front-end development, back-end development, full-stack development, data analysis, IT hardware & security, and pretty much anything else you can think of- if it involves technology, I'm into it.
               </div>
               <div class="col align-self-center">
                 As for my skillsets, I have extensive knowledge in HTML, CSS, JavaScript, a variety of different frameworks and
