--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ index.html page for portfolio website
             <h1>Emily Faso</h1>
             <div class="intro-text2">
                 <h2>Software Engineer & Web Developer</h2>
-                <p>With a deep passion for designing and crafting visually appealing and user-friendly interfaces for both mobile devices and the web, I excel in a wide range of coding languages, frameworks, UI/UX design skills, and website development. I prioritize continuous learning and development to consistently stay at the forefront of technological advancements and trends.</p>
+                <p>Driven by my passion for designing and crafting visually appealing, user-friendly interfaces for both mobile devices and web platforms, I excel in website development and have expertise in a wide range of coding languages, frameworks, and optimal UI/UX design practices. I am committed to prioritizing continuous learning, growth, and development to consistently stay at the forefront of technological advancements and industry trends.</p>
             </div>
         <!-- socials container-->
         <div class="socials-container">
