--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@ index.html page for portfolio website
           </div>
         </div>
         <div class="col project">
+          <h3 class="project-title">Landscaping Business Site</h3>
+          <div class="project-details">
+            <p>This project is one I recently completed for a client, showcasing my ability to design and develop a fully functional,
+            visually appealing website using the Wix platform. The website highlights my strong UI/UX skills and keen eye for design, it was created in such a way that ensures a seamless and engaging user experience across all devices. Every detail, from the layout to the color palette, was carefully considered to reflect the client's brand and services while maintaining ease of navigation. The site is fully responsive, meaning it adapts beautifully to both desktop and mobile devices, offering a user-friendly experience no matter how visitors access it. Click below to check it out!</p>
+            <a href="https://www.greenfroglawncare.com/" target="_blank">View Project</a>
+          </div>
+        </div>
+        <div class="col project">
           <h3 class="project-title">E-Commerce Site / Item Maintenance Application</h3>
           <div class="project-details">
             <p>This is an e-commerce mock site (with limited web design at the moment- don't mind that) focusing on primarily advanced JavaScript features and advanced JavaScript skills/concepts. It includes an item maintenance system where adminsitrators can manage and update product details being displayed on the e-commerce side, as well as add new products and delete ones they don't want visisble anymore. Users on the e-commerce side however are able to easily browse, filter, and sort products for purchase. They can then drag-and-drop, add them to their cart, check-out, and see real-time updates.</p>
